# LangChain-RAG-FastAPI-Service

DjangoUserService/: pyproject.toml
DjangoUserService/DjangoUserService/: urls.py
DjangoUserService/apps/user/: serializers.py  views.py
backend/: .env.example  pyproject.toml
backend/app/agent/: agent.py  agent_tools.py
backend/app/config/: rag.yaml
backend/app/rag/: reorder_service.py  sse_models.py  vector_store.py
backend/app/rag/document_handler/: __init__.py  processor.py
backend/app/rag/md5_manager/: __init__.py  md5_store.py
backend/app/rag/retrievers/: __init__.py  empty_retriever.py  hybrid_retriever.py
backend/app/router/: knowledge_service.py
backend/app/utils/: file_handler.py
front/: index.html  vite.config.js
front/src/: App.vue  style.css
front/src/components/: TabBar.vue
front/src/config/: api.js
front/src/router/: index.js
front/src/views/: AIChat.vue  KnowledgeBase.vue  Settings.vue
